# sat-data

./: README.md  pyproject.toml  requirements.txt
examples/: pystac-example.ipynb  pystac_example.ipynb  sentinelhub_example.ipynb  sentinelhub_setup.ipynb
src/sentinel2_tests/pystac/: catalogue_search.py  data_fetch.py
src/sentinel2_tests/sentinelhub_wrappers/: make_requests.py  request_scripts.py
src/sentinel2_tests/utils/: constants.py  gridding.py  sentinelhub_access.py
src/sentinel2_wrappers/pystac/: catalogue_search.py  data_fetch.py
src/sentinel2_wrappers/sentinelhub/: make_requests.py  request_scripts.py  sentinelhub_access.py
src/sentinel2_wrappers/utils/: constants.py  coord_tools.py  visualisation.py
