[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel2_wrappers_irr"
version = "0.0.0"
description = "backend tests for s2 data (l2) downloads"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
authors = [{name = 'i.ram'}]

dependencies = [
"geopandas==0.14.2", 
"matplotlib==3.8.2", 
"numpy==1.26.4",
"pystac_client==0.7.6",
"rioxarray==0.15.1",
"scipy==1.12.0",
"Shapely==2.0.3",
"stackstac==0.5.0",
"xarray==2023.12.0",
]

[project.urls]
Homepage = "https://github.com/irr-github/sat-data"
Issues = "https://github.com/irr-github/sat-data/issues"

[tool.pytest.ini_options]
testpaths = ["tests",]
log_cli = true
log_level = "DEBUG"

[tool.black]
skip-string-normalization = false